deploy/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: api
spec:
  ports:
  - name: backend
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: api
  type: ClusterIP
