deploy/api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns: public
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
  name: api
  namespace: api
spec:
  ingressClassName: nginx-public
  rules:
    - host: example.dev
      http:
        paths:
          - backend:
              service:
                name: api
                port:
                  number: 3000
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - example.dev
      secretName: api-tls
